# passwordgenerator

./: .gitignore  CMakeLists.txt  GITHUB_ACTIONS_GUIDE.md  GITHUB_SETUP_GUIDE.md  INSTALL_GUIDE.md  LICENSE  PACKAGE_SUMMARY.md  README.md  main.cpp  passwordgenerator.cpp  passwordgenerator.h
.github/workflows/: build.yml
debian_pkg/DEBIAN/: control  postinst  prerm
debian_pkg/usr/share/applications/: passwordgenerator.desktop
